--- a/nba_momentum_coding.ipynb
+++ b/nba_momentum_coding.ipynb
@@ -759,6 +759,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team\n",
+      "NOP    2.176434\n",
+      "NYK    1.317508\n",
+      "IND    1.314938\n",
+      "CLE    1.244379\n",
+      "OKC    0.949449\n",
+      "PHO    0.891655\n",
+      "ORL    0.881237\n",
+      "UTA    0.512499\n",
+      "MIN    0.425391\n",
+      "BOS    0.093897\n",
+      "BRK    0.035315\n",
+      "MIL   -0.050204\n",
+      "GSW   -0.051844\n",
+      "CHI   -0.113432\n",
+      "LAL   -0.119596\n",
+      "SAS   -0.190290\n",
+      "DET   -0.207054\n",
+      "CHO   -0.252322\n",
+      "POR   -0.420672\n",
+      "LAC   -0.450493\n",
+      "HOU   -0.511887\n",
+      "DEN   -0.556049\n",
+      "WAS   -0.633903\n",
+      "MEM   -0.761193\n",
+      "DAL   -0.884225\n",
+      "ATL   -0.914397\n",
+      "TOR   -0.925005\n",
+      "MIA   -1.249202\n",
+      "PHI   -1.279578\n",
+      "SAC   -3.107928\n",
+      "Name: Diff, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#------------------------------------------------------#\n",
+    "#                   Team Sharpe Ratios                 #\n",
+    "#------------------------------------------------------#\n",
+    "\n",
+    "#-- NBA Sharpe = [ X_tm.mean() / X_tm.std() ] - [ X_opp.mean() / X_opp.std() ]\n",
+    "\n",
+    "x = pd.DataFrame(pd.Series(data['Tm'].groupby('Team').mean() / data['Tm'].groupby('Team').std()))\n",
+    "x['Opp'] = data['Opp'].groupby('Team').mean() / data['Opp'].groupby('Team').std()\n",
+    "x['Diff'] = x['Tm'] - x['Opp']\n",
+    "print(x['Diff'].sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
