--- a/nba_momentum_github.ipynb
+++ b/nba_momentum_github.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "*December 2022*\n",
     "\n",
-    "I'm excited to share the second version of my momentum model! I've been away from basketball analytics over the past eight months, but the time away has been filled with opportunities that have allow me to create an improved second version. To start, I'd like to say thanks to all the friends and mentors who gave me insights and ideas into how I could make this model more robust to capture other important features in winning. Moreover, I've had the chance to actually see the validity in my results given that I posted the first iteration back in April 2022 looking ahead towards the NBA post-season. Finally, I've had the opportunity to really improve in my Python skills thanks to opportunities I've had working at Uber this summer and in quantitative investment research and trading this fall. Graduating this semester made life quite hectic and I missed the chance to come back to this project before the NBA regular-season started, but I'm grateful to be able to revisit it now and show the second iteration.\n",
+    "I'm excited to share the second version of my momentum model! I've been away from basketball analytics over the past eight months, but the time away has been filled with opportunities that have allow me to create an improved second version. I'd like to say thanks to all the friends and mentors who gave me insights and ideas into how I could make this model more robust and capture other important features in winning. Moreover, I've had the chance to actually see the validity in my results given that I posted the first iteration back in April 2022 looking ahead towards the NBA post-season. Finally, I've had the opportunity to really improve in my Python skills thanks to opportunities I've had working at Uber this summer and in quantitative investment research and trading this fall. Graduating this semester made life quite hectic and I missed the chance to come back to this project before the NBA regular season started, but I'm grateful to be able to revisit it now and show the second iteration.\n",
     "\n",
     "Below are the finalized equations I've created to model \"momenutm\", the attempt to capture and quantify how well a team has performed over the course of the season before the playoffs. The rest of the paper explains all the terms and how I transitioned from the first iteration to the second. \n",
     "\n",
@@ -36,7 +36,8 @@
     "6. [Accounting for the Shooting Green-Light with a Three-Point Shooting Parameter](#theta)\n",
     "7. [Scaling the Point Differential](#delta)\n",
     "8. [Inflating Road Wins and Deflating Home Losses](#lambda)\n",
-    "9. [Differentiating Winning vs. Losing Streaks](#zeta)"
+    "9. [Differentiating Winning vs. Losing Streaks](#zeta)\n",
+    "10. [Conclusion](#conclusion)"
    ]
   },
   {
@@ -59,10 +60,10 @@
     "| $\\omega_{opp, g}$ | The parameter used to account for the strength of an opponent |\n",
     "| $\\omega_L$ | The omega parameter used in the case where a team loses the game |\n",
     "| $\\omega_W$ | The omega parameter used in the case where a team wins the game |\n",
-    "| $\\rho_g$ | The percent of total games won by the opponent at game g in the nba-regular season (i.e., opponent winning percentage) |\n",
+    "| $\\rho_g$ | The percent of total games won by the opponent at game $g$ in the NBA regular season (i.e., opponent winning percentage) |\n",
     "| $\\zeta_g$ | The parameter that accounts for the impact of a winning or losing streak in the momentum model |\n",
-    "| $\\textnormal{sgn} \\space x$ | The sign of x, where x represents the point differential for a giving game g |\n",
-    "| $S_g$ | The number of the game within the current streak, e.g. win number 5 in a row. |\n",
+    "| $\\textnormal{sgn} \\space x$ | The sign of x, where x represents the point differential for a game $g$ |\n",
+    "| $S_g$ | The number of the game within the current streak, e.g. $S_g = 5$ at win number 5 in a row. |\n",
     "| $\\gamma (g)$ | The parameter which acts as a function of the game number in the regular season, used to weight the importance of when a game is played | \n",
     "| $\\lambda_{g}$ | The parameter used to inflate the value of road wins and home losses | "
    ]
@@ -148,14 +149,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourier Analysis Applied to Smoothing Parameter Construction <a name=\"gamma\"></a>\n",
+    "### Piecewise Smoothing Parameter Construction <a name=\"gamma\"></a>\n",
     "---\n",
     "\n",
     "The first iteration of this model approached the value of wins and losses as increasing linearly. The original parameter $\\gamma$ increased by one for each game into the 82-game long NBA regular season. While simple, this approach was effective in capturing my original intention which was to show that wins and losses matter more to a team's momentum later on into the regular season than they do earlier. Nonetheless, this model might suffer from oversimplification under the assumption that holding all else equal, momentum should scale linearly as the number of the game out of the 82 game regular season increases. \n",
     "\n",
     "A second and more robust iteration seeks to support the hypothesis that the value of a win or loss does not scale linearly throughout the NBA regular season. Moreover, even if the value of a win or loss is not to scale linearly but in some other fashion, there is an argument to be made that the value of a win or loss at game $g$ does not necessarily have to be greater than that of the same outcome at any time $g-1$ in the past. Put simply, the number of a game in the regular season has a varying degree of impact on a teams momentum depending on when during the season the game occurs. The basis for this hypothesis is rooted in the following logic. To start, games at the end of the NBA season have a greater impact than other games, especially for those teams that are in bunched up rankings to crack the playoffs or fighting for seeding. Additionally, games at the beginning of the season might have a greater impact than other games given that this is when a team can really set the tone and get started on the right footing. On the other hand, there's most likely a mid-season lull around the all-star break, where winning is still important but doesn't have the same boost to a team's morale or confidence when compared to the early and late stages of an NBA season. \n",
     "\n",
-    "With all this in mind, the parameter construction needs to capture the dynamics of how important the $g^{th}$ game into the NBA season is for a team's momentum. I I approached this task through the lens of fourier analysis, performing a rudimentary decomposition on the theoretical importance of different game numbers $g$ on a teams momentum with three different functions. Fourier analysis is the study of how simple trigonometric functions can be used to model or estimate more complex general functions.\n",
+    "With all this in mind, the parameter construction needs to capture the dynamics of how important the $g^{th}$ game into the NBA season is for a team's momentum. I I approached this task through with the idea of function decomposition in mind, given the importance of different game numbers $g$ on a team's momentum with three different functions. The piecewise function is applied to all values of $g$ subject to the following condition. G must a part of all natural numbers since we use the game number in a season as the time component, and you can only have whole numbers for this variable. This also leads to all momentum compounding being done under discrete properties instead of continuous. \n",
+    "\n",
+    "$$ g \\in G \\space : \\space G = \\{ 1, 2, ..., 82 \\} \\space \\land \\space G \\subseteq \\N $$\n",
     "\n",
     "#### Function 1 \n",
     "\n",
@@ -326,6 +329,28 @@
     "$$ \\zeta_g = \\textnormal{sgn} \\space x_g \\times S_g $$\n",
     "\n",
     "The first function here is the sign function. This just takes the sign of the value of the point differential, which we use a proxy for a game won or lost. If a team loses, we treat the sign as negative and if they win then it's treated as positive. The second term is where we control for the direction of the streak. The term $S_g$ represents the consecutive game number in the streak. Multiplying this by the sign of x at game g ($\\textnormal{sgn} \\space x_g$) differentiates winning streaks from losing streaks through increasingly positive or negative values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion <a name=\"Conclusion\"></a>\n",
+    "---\n",
+    "\n",
+    "##### Limits\n",
+    "This model is by no means a comprehensive method of evaluating the quality of a team beyond their wins and losses. It's purpose is to help quantify the effect of compounding wins and lossess in the form of a winning or losing streak. The use of the quantification is where the model is limited. To start, the model bases several of the parameter equations off of an 82-game season. This is a typical NBA season but it means the model has no applicable use after the last game of the regular season. This means that the model only has true utility in the time period between the last regular season game and the first playoff game. Playoff games provide additional momentum to a team, and therefore I think it would be unfair to try and apply the model after playoff games have been played. \n",
+    "\n",
+    "Another limit the model's use and applicability is the lack of historical evidence. A next step in the evolution of this project is to backtest the performance across past NBA season's and playoff runs. There's a bit of data-mining and p-hacking in my approach here, but nothing to completely distort the ability for the model to produce semi-accurate analysis of the regular season. Applying the model with the same parameters to NBA seasons from 2010 through 2021 would provide a solid 11-years of analysis to buttress to deny the validity of the equation as a tool in evaluating team strength prior to the playoffs. \n",
+    "\n",
+    "\n",
+    "##### Applications\n",
+    "With the game constraint mentioned above, the best use for the model would be to make playoff predictions at the end of the regular season using the model output. Final momentum standings would be the first place to look to see which teams might be poised for playoff success, but there's opportunity for greater detail in analysis. Trend analysis provides important information as to when a team's momentum is spiking. Team's that made momentum gains during the early period of the season but remained relatively flat throughout the rest of the season might not be as good of a pick compared to teams with slightly lower momentum but saw their momentum spike during the final quarter of the season. Curve crossover analysis is another aspect to explore in evaluating a post-season matchup at the end of the regular season. \"Memory\" in momentum is another area to explore, looking into the idea that perhaps cumulative 82-game momentum isn't the most reflective of the playoff picture and instead a rolling sum of a variable window might be useful. Finally, momentum volatility is another consideration to analysis. Teams may have lower momentum, but if their cumulative momentum growth is more stable than a team with higher momentum it might prove helpful for playoff consistency. \n",
+    "\n",
+    "##### Thoughts for Future Design\n",
+    "Going forward, the next iteration of momentum should incoporate some more statistical testing and design. I've approached the first and second version with complete freedom to design a new thought-framework for how we look at a basketball team at the end of the regular season. People always talk about trends, win-streaks, team records, etc. This precipitated the motivation to create something that centralizes the conversation about which teams is ready for a big playoff run into a quantifiable metric that can be visualized and differentiated across teams. A part of having total freedom in the design is that I've been the one to choose what goes into the model and what isn't included. While I'd like to think my basketball intuition would be correct, there's a greenfield opportunity to statistically test for the most important features to include. \n",
+    "\n",
+    "Momentum is also a very real concept in both physics and finance. Going forward, there's an opportunity to borrow from one or both of these field's understandings of momentum and attempt to legitimately incorporate it into the model. "
    ]
   }
  ],
